--- a/src/components/header/headers.module.css
+++ b/src/components/header/headers.module.css
@@ -1,23 +1,30 @@
-.headerWrapper {
-    padding: 0;
-    background-color: #F0F5FF;
-    display: block;
-}
-
 .header {
     display: flex;
     flex-direction: column;
     padding: 0;
 }
 
-.headerInner {
-     display: flex;
-     justify-content: space-between;
-     width: 100%;
-     margin-right: 200px;
-     padding: 0.375rem;
+.title {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 14px;
+    letter-spacing: 0;
+}
 
- }
+.headerWrapper {
+    display: block;
+    padding: 0;
+    background-color: #F0F5FF;
+}
+
+
+.headerInner {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0.375rem;
+    margin-right: 200px;
+}
 
 .button > Button {
     border: none;
@@ -35,31 +42,35 @@
 }
 
 h1 {
+    display: block;
     padding: 1px;
     font-size: 38px;
     font-weight: 700;
-    display: block;
 }
-@media  (width < 860px)  {
+
+@media (width < 860px) {
     .header {
         padding: 8px;
         margin: 0;
+        display: flex;
+        width: 100%;
     }
+
     h1 {
         font-weight: 500;
         font-size: 24px;
         line-height: 32px;
     }
+
 }
 
 
-
-
-@media  (width < 670px)  {
+@media (width < 670px) {
     .header {
         padding: 8px;
         margin: 0;
     }
+
     h1 {
         font-weight: 500;
         font-size: 20px;
