fix: change layout for items to fix bugs added: constants

--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -1,11 +1,11 @@
 .cards {
     background-color: var(--neutral-gray-1);
-    max-width: 240px;
-    min-width: 160px;
+    max-width: var(--gap-gx-2);
+    min-width: var(--gap-g-4);
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: 1px;
+    margin: var(--gap-x-1);
     flex-grow: 1;
 }
 
@@ -13,30 +13,30 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 45px;
+    height: var(--gap-s-7-5);
     width: 100%;
     border-bottom: 1px solid #d9d9d9;
     font-weight: 400;
-    font-size: 16px;
+    font-size: var(--font-size-s);
 }
 
 .cards > button {
     color: var(--primary-light-6);
     display: block;
-    margin: 12px 0;
+    margin: var(--gap-xs-1) 0;
     background-color: rgba(0, 0, 0, 0);
     border: none;
-    font-weight: 400;
-    font-size: 14px;
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-xs);
 }
 @media (width < 670px) {
     .title {
-        min-height: 60px;
-        width: auto;
+        min-height: var(--gap-sm-5);
+        width: 100%;
         white-space: pre-wrap;
     }
 
     .cards {
-        min-width: 320px;
+        min-width: var(--gap-xl-4);
     }
 }
