--- a/src/components/content/contents.module.css
+++ b/src/components/content/contents.module.css
@@ -1,8 +1,7 @@
 .content {
     display: flex;
     flex-direction: column;
-    padding: 24px;
-    max-width: 750px;
-    min-width: 175px;
-
+    padding: var(--gap-xs-7);
+    max-width: var(--gap-xxl-6);
+    min-width: var(--gap-g-7);
 }
