--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,9 +1,8 @@
 .layout {
-    max-width: 1440px;
-    margin: auto;
+    max-width: var(--gap-xxl-10);
+    margin: 0 auto;
+
 }
-
-
 
 .siteLayout {
     display: flex;
@@ -13,28 +12,27 @@
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 var(--gap-x-8) rgba(0, 0, 0, 0.15);
 }
 
 .logOut {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-    transform: translateY(-100%);
-    padding-bottom: 50px;
     display: flex;
-    gap: 10px;
-    padding-right: 10px;
+    transform: translateY(-100%);
+    padding-bottom: var(--gap-s-10);
+    gap: var(--gap-x-10);
+    padding-right: var(--gap-x-10);
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-xs);
+    line-height: var(--line-height-s_1);
+
 }
 
 
 @media (width < 768px) {
     .siteLayout {
         overflow-y: scroll;
-        min-height: 100vh;
         height: auto;
     }
-
 }
 
 
