--- a/src/components/btnMenu/btnMenu.module.css
+++ b/src/components/btnMenu/btnMenu.module.css
@@ -2,14 +2,14 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
-    margin: 16px 1px 1px 1px;
-    gap: 8px;
+    margin: var(--gap-xs-3) var(--gap-x-1) var(--gap-x-1) var(--gap-x-1);
+    gap: var(--gap-x-8);
 }
 
 
 @media (width < 670px) {
     .title {
-        min-height: 60px;
+        min-height: var(--gap-sm-5);
         width: auto;
         white-space: pre-wrap;
 
@@ -20,6 +20,6 @@
         align-items: center;
     }
     .myMenu > div {
-      min-width: 320px;
+      min-width: var( --gap-xl-4);
     }
 }
