--- a/src/components/header/headers.module.css
+++ b/src/components/header/headers.module.css
@@ -6,15 +6,15 @@
 
 .title {
     font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 14px;
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-xs);
     letter-spacing: 0;
 }
 
 .headerWrapper {
     display: block;
     padding: 0;
-    background-color: #F0F5FF;
+    background-color: var(--neutral-gray-1);
 }
 
 
@@ -22,8 +22,8 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 0.375rem;
-    margin-right: 200px;
+    padding: var(--gap-x-6);
+    margin-right: var(--gap-g-10_1);
 }
 
 .button > Button {
@@ -32,34 +32,34 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 12px 0 12px 0;
+    padding: var(--gap-xs-1) 0 var(--gap-xs-1) 0;
     text-decoration: none;
-    color: #262626;
+    color: var(--neutral-gray-10);
     cursor: pointer;
-    width: 130px;
-    height: 32px;
-    gap: 10px
+    width: var(--gap-g-1);
+    height: var(--gap-s-1);
+    gap: var(--gap-x-10);
 }
 
 h1 {
     display: block;
-    padding: 1px;
-    font-size: 38px;
-    font-weight: 700;
+    padding: var(--gap-x-1);
+    font-size: var(--font-size-l_1);
+    font-weight: var(--font-weight-bold);
 }
 
 @media (width < 860px) {
     .header {
-        padding: 8px;
+        padding: var(--gap-x-8);
         margin: 0;
         display: flex;
         width: 100%;
     }
 
     h1 {
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 32px;
+        font-weight: var(--font-weight-medium);
+        font-size: var(--font-size-m);
+        line-height: var(--line-height-m);
     }
 
 }
@@ -67,13 +67,13 @@ h1 {
 
 @media (width < 670px) {
     .header {
-        padding: 8px;
+        padding: var(--gap-x-8);
         margin: 0;
     }
 
     h1 {
-        font-weight: 500;
-        font-size: 20px;
+        font-weight: var(--font-weight-medium);
+        font-size: var(--font-size-s_2);
     }
 }
 
