--- a/src/components/motivation/motivation.module.css
+++ b/src/components/motivation/motivation.module.css
@@ -1,17 +1,20 @@
 .motivation {
     display: block;
-    padding: 24px;
+    padding: var(--gap-xs-7);
     font-family: var(--font-family);
-    font-weight: 500;
-    font-size: 20px;
-    background-color: #F0F5FF;
-    color: #262626;
+    font-weight: var(--font-weight-medium);
+    font-size: var(--gap-xs-5);
+    background-color: var(--neutral-gray-1);
+    color: var(--neutral-gray-10);
     margin: 0;
 }
 
 @media (width < 670px) {
     .motivation {
-        padding: 12px;
+        padding: var(--gap-xs-1);
     }
 }
+
+
+
 
