--- a/src/components/possibilities/possibilities.module.css
+++ b/src/components/possibilities/possibilities.module.css
@@ -1,11 +1,11 @@
 .list {
-    padding: 24px;
+    padding: var(--gap-xs-7);
     margin-top: 0;
     text-decoration: none;
     list-style: none;
     font-family: var(--font-family);
-    font-weight: 400;
-    font-size: 16px;
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-s);
     background-color: var(--neutral-gray-1);
     color: var(--primary-light-9);
 
@@ -17,10 +17,10 @@
 
 @media (width < 670px) {
     .list {
-        padding: 12px;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 20px;
+        padding: var(--gap-xs-1);
+        font-weight: var(--font-weight-regular);
+        font-size: var(--font-size-s);
+        line-height: var(--gap-xs-5);
     }
 }
 
