--- a/src/components/siders/siders.module.css
+++ b/src/components/siders/siders.module.css
@@ -1,6 +1,6 @@
 .sider {
     background-color: var(--neutral-gray-1);
-    height: 100%;
+    height: auto;
     position: relative;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
     filter: blur(0 8);
@@ -18,6 +18,7 @@
     width: var(--gap-xs-5);
     height: var(--gap-sm-8);
     clip-path: polygon(0 0, 100% 15%, 100% 85%, 0% 100%);
+    border: none;
 }
 
 
@@ -36,9 +37,6 @@
     min-height: calc(100vh - var(--gap-sm-7));
 }
 
-
-
-
 .innerMenu :global(.ant-menu-item-selected ) {
     color: var(--neutral-gray-10);
 }
@@ -53,7 +51,7 @@
         left: 0;
         top: 0;
         z-index: 10;
-        width: 100%;
+        width: auto;
     }
 
     .trigger {
