--- a/src/components/possibilities/possibilities.module.css
+++ b/src/components/possibilities/possibilities.module.css
@@ -1,23 +1,33 @@
 .list {
     padding: var(--gap-xs-7);
-    margin-top: 0;
-    text-decoration: none;
-    list-style: none;
+    margin-bottom: var(--gap-xs-7);
+
+    background-color: var(--neutral-gray-1);
+}
+
+.list :global(.ant-list-item) {
+    padding: 0;
+    margin: 0;
+
+    border: none;
+}
+
+.list :global(h4.ant-list-item-meta-title) {
+    padding: 0;
+    margin: 0;
+
     font-family: var(--font-family);
     font-weight: var(--font-weight-regular);
     font-size: var(--font-size-s);
-    background-color: var(--neutral-gray-1);
+
     color: var(--primary-light-9);
-
-}
-
-.list > li::before {
-    content: "- ";
+    background-color: var(--neutral-gray-1);
 }
 
 @media (width < 670px) {
     .list {
         padding: var(--gap-xs-1);
+
         font-weight: var(--font-weight-regular);
         font-size: var(--font-size-s);
         line-height: var(--gap-xs-5);
