--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
     --neutral-gray-7: #8C8C8C;
     --neutral-gray-10: #262626;
 
+    --light-geekblue-1: #F0F5FF;
 
     /*line heights */
     --line-height-xs: 14px;
