--- a/src/components/basic-layout/App.module.css
+++ b/src/components/basic-layout/App.module.css
@@ -12,7 +12,7 @@
     max-height: 100%;
     min-height: 100vh;
 
-    background-image: url("../assets/mainPageLight.png");
+    background-image: url("../../assets/mainPageLight.png");
     background-size: cover;
     background-repeat: no-repeat;
 
