sprint 2 fix ui

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@
 
     --light-geekblue-1: #F0F5FF;
 
+    --light-dustRed-5 : #ff4d4f;
+
     /*line heights */
     --line-height-xs: 14px;
     --line-height-s: 16px;
