--- a/src/pages/auth/auth/auth.module.css
+++ b/src/pages/auth/auth/auth.module.css
@@ -21,7 +21,7 @@
 
     width: 100%;
     height: 100%;
-    padding: var(--gap-x-10) var(--gap-m-1);
+    padding: var(--gap-x-10) var(--gap-sm-10_5);
     margin: var(--gap-xs-3);
 }
 
