--- a/src/pages/auth/registration/registration.module.css
+++ b/src/pages/auth/registration/registration.module.css
@@ -41,3 +41,8 @@
     background-color: var(--neutral-gray-1);
 }
 
+@media (width < 568px) {
+    .googleBtn :global(span.anticon-google-plus) {
+        display: none;
+    }
+}
