--- a/src/components/feedbaks/error-modal/error-modal.module.css
+++ b/src/components/feedbaks/error-modal/error-modal.module.css
@@ -1,12 +1,19 @@
+.containerErrorModal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 .wrapper{
     display: flex;
     justify-content: center;
     align-items: center;
 
+    max-width: var(--gap-xxl-2_1);
     width: 100%;
     height: 100%;
+
     margin: var(--gap-xs-2_5);
-    max-width: var(--gap-xxl-2_1);
 }
 
 .container {
@@ -17,9 +24,9 @@
 
     background-color: var(--neutral-gray-1);
 
-    width: 100%;
     min-width: var(--gap-xl-3);
     min-height: var(--gap-gx-5);
+    width: 100%;
     padding: var(--gap-sm-7_5);
 }
 
@@ -29,71 +36,67 @@
 
 .inner {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
 }
 
-.inner :global(h3.ant-typography){
+
+.inner :global(h1.ant-typography){
     text-align: center;
-    font-size: var(--font-size-m);
+
+    font-size: var(--gap-xs-7);
     font-weight: var(--font-weight-medium);
+
     color: var(--neutral-gray-10);
+
     margin: var(--gap-xs-7) 0 0 0;
 }
 
+.inner :global(span.ant-typography){
+    display: block;
+    text-align: center;
 
+    font-weight: var(--font-weight-regular);
 
+    width: 100%;
+    padding-top: var(--gap-x-5);
+}
 
 .inner :global(span.ant-typography){
-    display: inline-block;
-    text-align: center;
+
     font-size: var(--font-size-xs);
     font-weight: var(--font-weight-regular);
+
     color: var(--neutral-gray-7);
+
     margin: 0;
 }
 
-.text {
-    width: 100%;
-    margin-top: var(--gap-xs-7);
-}
-.verificationInput {
-    margin: var(--gap-xs-5) 0 ;
-
-}
-
-
-.characterInactive {
-    background: transparent;
-}
-
-.verification {
-    display: flex;
-    justify-content: center;
-    align-items: center
-}
-
-.verificationError {
+.button .buttonClose{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-color: var(--light-dustRed-5);
+    max-width: 100%;
+    width: max-content;
 }
 
-.containerVerification {
-    gap: var(--gap-xs-1);
-    height: var(--gap-s-5);
+.innerBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: var(--gap-xs-7);
+    gap: var(--gap-x-8);
 }
 
-@media (width < 568px) {
+.buttonClose {
+    border: var(--gap-x-1) solid var(--neutral-gray-5);
+    color: var(--neutral-gray-10);
+}
+
+@media (width < 555px) {
     .container {
-        padding: var(--gap-xs-10) var(--gap-xs-3) ;
-    }
-    .containerVerification {
-        gap: var(--gap-x-8);
-    }
-    .brTitle {
-        display: none;
+        padding: var(--gap-xs-3);
     }
 }
