--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@
     --gap-xs-5: 20px;
     --gap-xs-6: 22px;
     --gap-xs-7: 24px;
+    --gap-xs-7_5: 25px;
     --gap-xs-8: 26px;
     --gap-xs-10: 30px;
 
@@ -83,7 +84,7 @@
 
 
 
-
+    --gap-g-0_5: 120px;
     --gap-g-1: 130px;
     --gap-g-2: 150px;
     --gap-g-4: 160px;
@@ -108,6 +109,7 @@
 
     --gap-xxl-2: 500px;
     --gap-xxl-2_1: 540px;
+    --gap-xxl-2_2: 550px;
     --gap-xxl-3: 600px;
     --gap-xxl-4: 700px;
     --gap-xxl-6: 800px;
@@ -117,6 +119,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
+
 }
 
 @media (width < 768px) {
