--- a/src/pages/auth/auth/auth.module.css
+++ b/src/pages/auth/auth/auth.module.css
@@ -17,7 +17,7 @@
     align-items: center;
     flex-direction: column;
 
-    background-color: #FFFFFF;
+    background-color: var(--neutral-gray-1);
 
     width: 100%;
     height: 100%;
