--- a/src/components/feedbaks/error-modal/error-modal.module.css
+++ b/src/components/feedbaks/error-modal/error-modal.module.css
@@ -1,21 +1,3 @@
-.containerErrorModal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-.wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    max-width: var(--gap-xxl-2_1);
-    width: 100%;
-    height: 100%;
-
-    margin: var(--gap-xs-2_5);
-}
-
 .container {
     display: flex;
     justify-content: center;
@@ -23,11 +5,6 @@
     align-items: center;
 
     background-color: var(--neutral-gray-1);
-
-    min-width: var(--gap-xl-3);
-    min-height: var(--gap-gx-5);
-    width: 100%;
-    padding: var(--gap-sm-7_5);
 }
 
 .icon {
@@ -36,11 +13,10 @@
 
 .inner {
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
 }
-
 
 .inner :global(h1.ant-typography){
     text-align: center;
@@ -53,50 +29,22 @@
     margin: var(--gap-xs-7) 0 0 0;
 }
 
-.inner :global(span.ant-typography){
-    display: block;
-    text-align: center;
-
-    font-weight: var(--font-weight-regular);
-
-    width: 100%;
-    padding-top: var(--gap-x-5);
-}
-
-.inner :global(span.ant-typography){
-
-    font-size: var(--font-size-xs);
-    font-weight: var(--font-weight-regular);
-
-    color: var(--neutral-gray-7);
-
-    margin: 0;
-}
-
-.button .buttonClose{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
-    width: max-content;
-}
-
-.innerBtn {
+.modal :global(.ant-modal-footer) {
     display: flex;
     justify-content: center;
     align-items: center;
 
-    margin-top: var(--gap-xs-7);
-    gap: var(--gap-x-8);
+    padding-bottom: var(--gap-s-10)
+}
+
+.button {
+  background-color: var(--primary-light-6);
 }
 
 .buttonClose {
     border: var(--gap-x-1) solid var(--neutral-gray-5);
-    color: var(--neutral-gray-10);
-}
 
-@media (width < 555px) {
-    .container {
-        padding: var(--gap-xs-3);
-    }
+    color: var(--neutral-gray-10);
+
+    min-width: var(--gap-g-1_3);
 }
